--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,12 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true
+    show-sql: false
   liquibase:
     change-log: db\changelog\db.changelog-master.yml
   mvc.hiddenmethod.filter.enabled: true
+  logging:
+    level:
+      root: debug
+      org.springframework.security: DEBUG
+      org.springframework: debug
