--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,21 @@
         <javax.version>2.3.1</javax.version>
         <liquibase.version>4.5.0</liquibase.version>
         <postgres.version>42.3.0</postgres.version>
+        <hystrix.version>2.2.10.RELEASE</hystrix.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2020.0.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -69,6 +83,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>${hystrix.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
