--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.6'
 
 services:
   league:
@@ -11,3 +11,10 @@ services:
       - POSTGRES_DB=league
     ports:
       - 15432:5432
+
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 6379:6379
